* Implemented FR 1905362 [ERDesignerNG] Reuse current model during reverse enginer
* Implemented FR 1903318 [ERDesignerNG] Add support for subject areas
* Bug Fixing 1912834 [ERDesignerNG] RE Table selection fails
* Bug Fixing 1912838 [ERDesignerNG] Dropping a table should drop the constraints

Release 1.4

* Bug Fixing 1934764 [ERDesignerNG] Table name length limitation for MySQL wrong
* Bug Fixing 1934765 [ERDesignerNG] DataType DECIMAL UNSIGNED fails in MySQL
* Bug Fixing 1958824 [ERDesignerNG] entity comment not saved
* Bug Fixing 1968870 [ERDesignerNG] Complete compare fails on attributes
* Bug Fixing 1969689 [ERDesignerNG] Reverse engineer pk fails on DB2
* Bug Fixing 1970375 [ERDesignerNG] Reverse engineer fk fails on DB2
* Fixed some spelling mistakes
* Implemented FR 1950583 [ERDesignerNG] Save connection parameters
* Implemented FR 1938750 [ERDesignerNG] Show comments in editing area
* Implemented FR 1973045 [ERDesignerNG] Add grid view to editor

Release 1.5

* Working on comments in editor
* Implemented FR 1958830 [ERDesignerNG] notes/text on diagram
* Bug Fixing 1977581 [ERDesignerNG] grid related minor issues
* Bug Fixing 1978355 [ERDesignerNG] string default values on MySQL
* Bug Fixing 2070251 [ERDesignerNG] Lack of primary key causes exception
* Applied patch 2124875 [ERDesignerNG] Add Postgres data types

Release 1.6

* Implemented FR 2184481 Allow specifying table fields to show after rev. engineering
* Implemented FR 1886304 [ERDesignerNG] Allow saving of model to database
* Implemented FR 1958835 [ERDesignerNG] ability to sort columns
* Implemented FR 1977556 [ERDesignerNG] db aliases
* Bug Fixing 2215901 [ERDesignerNG] showing and hiding comments does not work
* Bug Fixing 2278602 [ERDesignerNG] Relation text offset position not stored
* Bug Fixing 2283538 [ERDesignerNG] Relation does not take care of attribute order
* Bug Fixing 2283527 [ERDesignerNG] Line separators sometimes wrong
* Bug Fixing 2284610 [ERDesignerNG] domains cannot be saved
